Enhancement of Kit editor